Add necessary detail controllers

--- a/ImageViewer/Interface/Base.lproj/Main.storyboard
+++ b/ImageViewer/Interface/Base.lproj/Main.storyboard
@@ -5,6 +5,7 @@
     </device>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
@@ -50,6 +51,7 @@
                                                 </constraints>
                                                 <connections>
                                                     <outlet property="photoView" destination="MVa-zC-hyT" id="pqr-aS-vV9"/>
+                                                    <segue destination="p7e-pz-58e" kind="show" identifier="showPhoto" id="mZm-T0-C3Y"/>
                                                 </connections>
                                             </collectionViewCell>
                                         </cells>
@@ -96,6 +98,45 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="476" y="132.68365817091455"/>
+        </scene>
+        <!--Photo Page Controller-->
+        <scene sceneID="u4Y-dH-3aR">
+            <objects>
+                <pageViewController autoresizesArchivedViewToFullSize="NO" transitionStyle="pageCurl" navigationOrientation="horizontal" spineLocation="min" id="p7e-pz-58e" customClass="PhotoPageController" customModule="ImageViewer" customModuleProvider="target" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="2mi-40-OQl" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1180" y="133"/>
+        </scene>
+        <!--Photo Viewer Controller-->
+        <scene sceneID="kFl-NG-VGp">
+            <objects>
+                <viewController storyboardIdentifier="PhotoViewerController" id="idU-6N-pDe" customClass="PhotoViewerController" customModule="ImageViewer" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="e50-cd-gZk">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D87-ln-mhH">
+                                <rect key="frame" x="0.0" y="192.5" width="375" height="281"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="D87-ln-mhH" secondAttribute="height" multiplier="4:3" id="4sn-aI-RmD"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="D87-ln-mhH" firstAttribute="centerY" secondItem="e50-cd-gZk" secondAttribute="centerY" id="3GX-RX-9iE"/>
+                            <constraint firstAttribute="trailing" secondItem="D87-ln-mhH" secondAttribute="trailing" id="ZFQ-0g-XOY"/>
+                            <constraint firstItem="D87-ln-mhH" firstAttribute="leading" secondItem="e50-cd-gZk" secondAttribute="leading" id="mmj-M9-Fra"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="bs5-6g-PBG"/>
+                    </view>
+                    <connections>
+                        <outlet property="photoImageView" destination="D87-ln-mhH" id="QS6-pp-0T8"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="pdI-A7-0Gk" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1855" y="133"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="CWY-Rs-SNv">
