Recognize gestures to launch zoom controller

--- a/ImageViewer/Interface/Base.lproj/Main.storyboard
+++ b/ImageViewer/Interface/Base.lproj/Main.storyboard
@@ -115,7 +115,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D87-ln-mhH">
+                            <imageView contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="D87-ln-mhH">
                                 <rect key="frame" x="0.0" y="192.5" width="375" height="281"/>
                                 <gestureRecognizers/>
                                 <constraints>
